--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
         content="An Amaze UI Touch template that helps you build fast, modern mobile web apps.">
   <meta name="viewport"
         content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-  <title>Amaze UI Touch Starter Kit</title>
+  <title>北美时尚分享社区</title>
 
   <!-- Set render engine for 360 browser -->
   <meta name="renderer" content="webkit">
